platform/api-portal/datacheck-brownfield-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: datacheck-brownfield-proxy
spec:
  ports:
    - port: 80
      targetPort: 80
