platform/api-portal/donations-brownfield-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: donations-brownfield-proxy
spec:
  ports:
    - port: 80
      targetPort: 80
