platform/api-portal/suppliers-brownfield-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: suppliers-brownfield-proxy
spec:
  ports:
    - port: 80
      targetPort: 80
